--- a/docs/latex/tex/C_Diseno.tex
+++ b/docs/latex/tex/C_Diseno.tex
@@ -167,3 +167,4 @@ Por lo que una vez sabemos que la arquitectura es BLoC, he pretendido tener inte
 \end{itemize}
 
 \section{Diseño de interfaces}\label{nterfaces }
+Como se comenta en el apéndice del especificación de requisitos~\pageref{requisitos}, la mayor parte de las interfaces se diseñaron con el cliente, a través de bocetos, con la finalidad de facilitar la comunicación y el entendimiento cliente-analista. Un ejemplo de esto es la siguiente imagen~\ref{fig:boceto}.
