--- a/docs/latex/tex/E_Manual_usuario.tex
+++ b/docs/latex/tex/E_Manual_usuario.tex
@@ -1,6 +1,6 @@
 \apendice{Documentación de usuario}
 
-\section{Introducción}
+\section{Introducción}\label{manualusuario}
 En este apartado se recoge todo lo que un usuario necesita conocer para poder ejecutar la aplicación en su teléfono móvil Android personal y los requisitos mínimos necesarios.
 
 \section{Requisitos de usuarios}
