Plan proyecto herramientas #57

--- a/docs/latex/tex/A_Plan_proyecto.tex
+++ b/docs/latex/tex/A_Plan_proyecto.tex
@@ -243,11 +243,11 @@ Para el completar el proyecto han sido necesarias gran multitud de herramientas,
 		\toprule
 		Librería     & Versión & Descripción                                                     & Licencia                \\ 	\midrule	
 		VsCode        & 1.46.1  & \begin{tabular}[c]{@{}l@{}}Editor de código.\\  \end{tabular} & MIT\\ 
-		Android Studio & 	4.0 & \begin{tabular}[c]{@{}l@{}}Aplicación para virtualización \\del sistema operativo Android.\\  \end{tabular} & Apache 2.0\\
+		Android Studio & 	4.0 & \begin{tabular}[c]{@{}l@{}}App virtualización \\del SO Android.\\  \end{tabular} & Apache 2.0\\
 		Android R  & 10.0+ Api 30 & \begin{tabular}[c]{@{}l@{}}Versión del S.O \\virtualizado.\\  \end{tabular} & Apache 2.0\\
-		Flutter    & 1.17    & \begin{tabular}[c]{@{}l@{}}Framework con el que se\\ ha desarrollado la app\end{tabular}                     
+		Flutter    & 1.17    & \begin{tabular}[c]{@{}l@{}}Framework usado en\\ desarollar la app\end{tabular}                     
 		& BSD 3-Clause \\
-		Dart    & 2.2.0    & \begin{tabular}[c]{@{}l@{}}Lenguaje de programación\\ desarrollado por Google\end{tabular}                     
+		Dart    & 2.2.0    & \begin{tabular}[c]{@{}l@{}}Lenguaje prog.\\ desarrollado por Google\end{tabular}                     
 		& BSD \\
 		Node.js    & 12.18    & \begin{tabular}[c]{@{}l@{}}Uso de npm\\ \end{tabular}                     
 		& MIT \\
@@ -267,10 +267,51 @@ La licencia es MIT (Massachusetts Institute Technology) siendo una licencia de u
 		\begin{tabular}{ccc}
 			\hline
 			Fuente                        & Descripción & Licencia  	\\ \hline
-			Giphy					    & Repositorio de contenido visual  & Open Source   		\\
+			Giphy					    & Repositorio de contenido visual  & Open Source   		\\\hline
 
 		\end{tabular}
 		\caption{Fuente del contenido audiovisual}
 		\label{table:fuenteimagenes}
 	\end{center}
+\end{table}
+
+\subsection{Música y sonido}
+
+\begin{table}[H]
+	\begin{center}
+		\begin{tabular}{ccc}
+			\hline
+			Fuente                        & Descripción & Licencia  	\\ \hline
+			~\href{https://www.zapsplat.com/}{Freesounds}				    & Repositorio musical visual  & CC0 Public Domain   		\\\hline
+			
+		\end{tabular}
+		\caption{Fuente del contenido audiovisual}
+		\label{table:fuentesonido}
+	\end{center}
+\end{table}
+
+\subsection{Herramientas}
+En FLutter son conocidos como \emph{packages}, paquetes que ofrecen funcionalidades que ya han sido implementadas, todas ellas se pueden encontrar en la siguiente \href{https://pub.dev/}{web}. Estos se integran en el fichero pubspec.yaml. En este caso se usaron: 
+
+
+\begin{table}[H]
+	
+	\rowcolors {2}{gray!35}{}
+	\begin{tabular}{l l l l}
+		\toprule
+		Librería     & Versión & Descripción                                                     & Licencia                \\ 	\midrule	
+		shared preferences        & 0.5.6  & \begin{tabular}[c]{@{}l@{}}Persistencia datos.\\  \end{tabular} & BSD\\ 
+		flutter email sender & 	3.0.1 & \begin{tabular}[c]{@{}l@{}}Envio correos\\  \end{tabular} & Apache 2.0\\
+		url launcher  & 5.4.9 & \begin{tabular}[c]{@{}l@{}}Abrir navegador.\\  \end{tabular} & Apache 2.0\\
+		flutter phone state    & 0.5.9    & \begin{tabular}[c]{@{}l@{}}Abrir app llamadas\end{tabular}                     
+		& MIT \\
+		Dart    & 2.2.0    & \begin{tabular}[c]{@{}l@{}}Lenguaje prog.\\ desarrollado por Google\end{tabular}                     
+		& BSD \\
+		Node.js    & 12.18    & \begin{tabular}[c]{@{}l@{}}Uso de npm\\ \end{tabular}                     
+		& MIT \\
+		Firebase console    & 5.5    & \begin{tabular}[c]{@{}l@{}}Herramienta de Google\\ gestión sercios.\end{tabular}                     
+		& Apache 2.0 \\ \bottomrule
+	\end{tabular}
+	\caption{Licencias de bibliotecas y herramientas utilizadas}
+	\label{tabla:paquetes}
 \end{table}
