--- a/docs/latex/tex/C_Diseno.tex
+++ b/docs/latex/tex/C_Diseno.tex
@@ -185,6 +185,8 @@ Para los juegos habría que testear si el diseño responsive se garantiza, ya qu
 \subsection{Paleta de colores}
 La paleta de colores es la ofrecida por Material Desing Palete,~\href{https://material.io/design/color/the-color-system.html#color-theme-creation}{web}. Se supone que garantiza un gran contraste para facilitar la lectura, como el reconocimiento correcto de los contornos. Como consecuencia lo dota de gran usabilidad.
 
+En el caso que la paleta de colores no sea del agrado del usuario final, se puede meter dentro del apartado 'settings', para poner la aplicación de color negro, esto incrementa el contraste, lo que es una mejora de usabilidad.
+
 \begin{figure}[H]
 	\centering
 	\includegraphics[width=0.9\textwidth]{disenio/palette.png}
