Plan proyecto herramientas 2 #57

--- a/docs/latex/tex/A_Plan_proyecto.tex
+++ b/docs/latex/tex/A_Plan_proyecto.tex
@@ -252,7 +252,11 @@ Para el completar el proyecto han sido necesarias gran multitud de herramientas,
 		Node.js    & 12.18    & \begin{tabular}[c]{@{}l@{}}Uso de npm\\ \end{tabular}                     
 		& MIT \\
 		Firebase console    & 5.5    & \begin{tabular}[c]{@{}l@{}}Herramienta de Google\\ gestión sercios.\end{tabular}                     
-		& Apache 2.0 \\ \bottomrule
+		& Gratis \\
+		Play Sotre console    & --    & \begin{tabular}[c]{@{}l@{}}Backend developers\\ tienda apps\end{tabular}                     
+		& \begin{tabular}[c]{@{}l@{}}Licencia \\ pagada\end{tabular}  \\
+		Admob services    & --    & \begin{tabular}[c]{@{}l@{}}Herramienta publicidad\\\end{tabular}                     
+		& Gratis \\ \bottomrule
 	\end{tabular}
 	\caption{Licencias de bibliotecas y herramientas utilizadas}
 	\label{tabla:Licencias}
@@ -305,12 +309,33 @@ En FLutter son conocidos como \emph{packages}, paquetes que ofrecen funcionalida
 		url launcher  & 5.4.9 & \begin{tabular}[c]{@{}l@{}}Abrir navegador.\\  \end{tabular} & Apache 2.0\\
 		flutter phone state    & 0.5.9    & \begin{tabular}[c]{@{}l@{}}Abrir app llamadas\end{tabular}                     
 		& MIT \\
-		Dart    & 2.2.0    & \begin{tabular}[c]{@{}l@{}}Lenguaje prog.\\ desarrollado por Google\end{tabular}                     
-		& BSD \\
-		Node.js    & 12.18    & \begin{tabular}[c]{@{}l@{}}Uso de npm\\ \end{tabular}                     
+		sqflite    & 1.3.0    & \begin{tabular}[c]{@{}l@{}}BD local\end{tabular}                     
 		& MIT \\
-		Firebase console    & 5.5    & \begin{tabular}[c]{@{}l@{}}Herramienta de Google\\ gestión sercios.\end{tabular}                     
-		& Apache 2.0 \\ \bottomrule
+		path    & 1.6.4    & \begin{tabular}[c]{@{}l@{}}Rutas \end{tabular}                     
+		& BSD \\
+		
+		firebase auth   & 0.16.1    & \begin{tabular}[c]{@{}l@{}}Conectar con firebase\end{tabular}                     
+		& BSD \\
+		google sign in   & 4.5.1    & \begin{tabular}[c]{@{}l@{}}Sign in Google\end{tabular}                     
+		& BSD \\
+		firebase core   & 0.4.5    & \begin{tabular}[c]{@{}l@{}}API firebase moviles\end{tabular}                     
+		& BSD \\
+		firebase core web   & 0.1.1+2    & \begin{tabular}[c]{@{}l@{}}API web\end{tabular}                     
+		& BSD \\
+		firebase admob   & 0.9.3+2    & \begin{tabular}[c]{@{}l@{}}Integración publicidad\end{tabular}                     
+		& BSD \\ 
+		cloud firestore   & 0.13.7    & \begin{tabular}[c]{@{}l@{}}Cloud firestore\end{tabular}                     
+		& BSD \\
+		audioplayers   & 0.15.1    & \begin{tabular}[c]{@{}l@{}}Reproductor musical\end{tabular}                     
+		& MIT \\
+		flutter share me   & 0.9.1    & \begin{tabular}[c]{@{}l@{}}Shared \end{tabular}                     
+		& Apache 2.0 \\
+		bubble   & 1.1.9+1    & \begin{tabular}[c]{@{}l@{}}Chat\end{tabular}                     
+		& BSD \\
+		provider   & 2.0.1   & \begin{tabular}[c]{@{}l@{}}Herramienta integración\end{tabular}                     
+		& MIT \\
+		
+		\bottomrule
 	\end{tabular}
 	\caption{Licencias de bibliotecas y herramientas utilizadas}
 	\label{tabla:paquetes}
