Plan proyecto herramientas 3 #57

--- a/docs/latex/tex/A_Plan_proyecto.tex
+++ b/docs/latex/tex/A_Plan_proyecto.tex
@@ -262,7 +262,7 @@ Para el completar el proyecto han sido necesarias gran multitud de herramientas,
 	\label{tabla:Licencias}
 \end{table}
 
-La licencia es MIT (Massachusetts Institute Technology) siendo una licencia de uso libre y permitiendo su uso comercial y modificación.
+Aclarar que de las herramientas anteriores, las dos que aparecen como licencia gratuita, es debido a la escalabilidad de aplicación. Hace referencia que a partir de una cantidad de usuarios/consultas tienes que pagar por el servicio para el caso de firebase console. Para el caso de admob, depende del número de clicks en los anuncios, impuestos y regulaciones varias, por lo que en mi caso, es una aplicación pequeña, siendo el servicio gratuito con los beneficios para Google.
 
 \subsubsection{Imágenes y material gráfico}
 
@@ -340,3 +340,22 @@ En FLutter son conocidos como \emph{packages}, paquetes que ofrecen funcionalida
 	\caption{Licencias de bibliotecas y herramientas utilizadas}
 	\label{tabla:paquetes}
 \end{table}
+
+\subsection{Licencia aplicación}
+Estudiando las compatibilidades con el total de las licencias, donde más problemas encontramos es con la licencia Apache 2.0, ya que es de las más restrictivas. No me impide la comercialización (free-to-play), que es justo lo que quiero, pero en el caso de que modifique el código fuente de algunas de las herramientas, si que tendría más problemas,pero no, ya que solo las uso.
+
+Revisando los juegos, hay que detenerse en:
+
+\begin{itemize}
+	\item \textbf{Derecho de autor o \emph{Copyright}}: no se infringe, ya que este protege el código fuente, aplicación y recursos artísticos cosa que se han hecho desde cero, como obra nueva.
+	\item \textbf{Propiedad industrial}: no se infringe, no hay patentes encontradas. 
+	\item \textbf{Trademark:} sin problema, no se puede apropiar de la palabra serpiente / snake o cuatro en raya, por lo que se puede llamar así.
+\end{itemize}
+
+Por lo tanto el trabajo final de grado tiene:
+ 						
+\textbf{Licencia MIT (Massachusetts Institute Technology) siendo una licencia de uso libre y permitiendo su uso comercial y modificación.}
+
+
+
+
