--- a/docs/latex/tex/2_Objetivos_del_proyecto.tex
+++ b/docs/latex/tex/2_Objetivos_del_proyecto.tex
@@ -8,8 +8,10 @@ A continuación, se detallarán los objetivos que han motivado la realización d
 \section{Objetivos generales}
 \begin{itemize}
 	\item Desarrollar una aplicación para \emph{smartphone}.
-	\item Implemenación y despliegue de la aplicación en la tienda de apps.
+	\item Implemenación y despliegue de la app en la tienda de de Google.
 	\item Hacer que los usuarios pasen un buen rato.
+	\item Mostrar quien es el creador de la aplicación, con el fin de poder usar esta como herramienta o portfolio.
+	\item Desarrollar juegos.
 \end{itemize}
 
 \section{Objetivos técnicos}
@@ -18,15 +20,22 @@ A continuación, se detallarán los objetivos que han motivado la realización d
 	\item Comprender el funcionamiento de Flutter.
 	\item Control de versiones con la herramienta GitHub, mediante comandos a través de GitBash.
 	\item Generar documentación de todo el proceso en \LaTeX.
-	\item Realizar una planificación mediante \emph{Scrum} eficiente, mediante la herramienta ZenHub, integrada en GitHub.
+	\item Realizar una planificación mediante \emph{Scrum} eficiente, a través de la herramienta ZenHub, integrada en GitHub.
+	\item Comenzar a usar las herramientas telemáticas para las reuniones con los tutores del trabajo final de grado. 
 	\item Comunicación de la aplicación mediante WebServices.
+	\item Conocer y aprender a usar las herramientas que proporciona el \emph{Cloud Services} de Google.
+	\item Diseñar la arquitectura de la aplicación.
 	
 \end{itemize}
 
 \section{Objetivos personales}
 \begin{itemize}
-	\item Adquirir el conocimiento necesario para desarrollar aplicaciones móviles y multiplataforma.
+	\item Adquirir el conocimiento necesario para desarrollar aplicaciones móviles y multiplataforma. Es decir, para tres entornos, Android, iOS y web.
 	\item Aprobar el trabajo de fin de grado.
 	\item Estudiar como generar documentación en \LaTeX.
 	\item Aprender que sin esfuerzo no hay recompensa.
+	\item Comprender el funcionamiento de la comunicación entre la una aplicación y los servicios en la nube.
+	\item Investigar diferentes herramientas para solventar los problemas que salgan.
+	\item Adquirir el conocimiento necesario para poder llevar proyectos.
+	\item Conseguir manejarme en entornos de incertidumbre.
 \end{itemize}
