--- a/docs/latex/tex/2_Objetivos_del_proyecto.tex
+++ b/docs/latex/tex/2_Objetivos_del_proyecto.tex
@@ -31,11 +31,12 @@ A continuación, se detallarán los objetivos que han motivado la realización d
 \section{Objetivos personales}
 \begin{itemize}
 	\item Adquirir el conocimiento necesario para desarrollar aplicaciones móviles y multiplataforma. Es decir, para tres entornos, Android, iOS y web.
-	\item Aprobar el trabajo de fin de grado.
+	\item Aprobar el trabajo de fin de grado, ya que es un reto.
 	\item Estudiar como generar documentación en \LaTeX.
 	\item Aprender que sin esfuerzo no hay recompensa.
 	\item Comprender el funcionamiento de la comunicación entre la una aplicación y los servicios en la nube.
+	\item Reforzar los conocimientos adquiridos durante la carrera.
 	\item Investigar diferentes herramientas para solventar los problemas que salgan.
-	\item Adquirir el conocimiento necesario para poder llevar proyectos.
+	\item Adquirir las nociones necesarias para poder llevar proyectos.
 	\item Conseguir manejarme en entornos de incertidumbre.
 \end{itemize}
