--- a/docs/latex/bibliografia.bib
+++ b/docs/latex/bibliografia.bib
@@ -1,13 +1,3 @@
-@misc{noauthor_notitle_nodate
-}
-
-@misc{noauthor_knime_nodate,
-	title = {{KNIME} {\textbar} {Open} for {Innovation}},
-	url = {https://www.knime.com/},
-	urldate = {2020-06-26},
-	file = {KNIME | Open for Innovation:C\:\\Users\\Samuel Casal Cantero\\Zotero\\storage\\RSZLGKBP\\www.knime.com.html:text/html}
-}
-
 @misc{ wiki:scrm,
     author = "{Wikipedia contributors}",
     title = "Scrum (software development) --- {Wikipedia}{,} The Free Encyclopedia",
@@ -16,3 +6,10 @@
     note = "[Online; accessed 10-March-2020]"
   }
 
+@misc{ wiki:framework,
+	author = "Wikipedia",
+	title = "Licencia --- Wikipedia{,} The Free Encyclopedia",
+	year = "2020",
+	url = {https://es.wikipedia.org/wiki/Framework},
+	note = "[]"
+}
