--- a/docs/latex/bibliografia.bib
+++ b/docs/latex/bibliografia.bib
@@ -13,3 +13,29 @@
 	url = {https://es.wikipedia.org/wiki/Framework},
 	note = "[]"
 }
+
+@misc{ foro:encuesta,
+	author = "Wikipedia",
+	title = "Licencia --- Wikipedia{,} The Free Encyclopedia",
+	year = "2020",
+	url = {https://www.forocoches.com/foro/showthread.php?t=7255092&highlight=flutter},
+	note = "[]"
+}
+
+@misc{ wiki:ionnic,
+	author = "Forocoches",
+	title = "Desarrollo apps moviles",
+	year = "2020",
+	url = {https://en.wikipedia.org/wiki/Ionic_(mobile_app_framework)},
+	note = "[]"
+}
+
+@misc{ wiki:react,
+author = "Forocoches",
+title = "Desarrollo apps moviles",
+year = "2020",
+url = {https://en.wikipedia.org/wiki/Ionic_(mobile_app_framework)},
+note = "[]"
+}
+
+https://en.wikipedia.org/wiki/React_Native
