--- a/docs/latex/bibliografia.bib
+++ b/docs/latex/bibliografia.bib
@@ -31,11 +31,19 @@
 }
 
 @misc{ wiki:react,
-author = "Forocoches",
-title = "Desarrollo apps moviles",
+author = "Wikipedia",
+title = "Licencia --- Wikipedia{,} The Free Encyclopedia",
 year = "2020",
-url = {https://en.wikipedia.org/wiki/Ionic_(mobile_app_framework)},
+url = {https://en.wikipedia.org/wiki/React_Native},
 note = "[]"
 }
 
-https://en.wikipedia.org/wiki/React_Native
+@misc{ wiki:xamarin,
+	author = "Wikipedia",
+	title = "Licencia --- Wikipedia{,} The Free Encyclopedia",
+	year = "2020",
+	url = {https://en.wikipedia.org/wiki/Xamarin},
+	note = "[]"
+}
+
+
