--- a/docs/latex/tex/3_Conceptos_teoricos.tex
+++ b/docs/latex/tex/3_Conceptos_teoricos.tex
@@ -25,7 +25,7 @@ En el mercado existen muchos frameworks disponibles para el desarrollo de aplica
 	\caption{Encuesta}\label{fig:encuesta}
 \end{figure}
 
-Algo ideal es que se buscó un framework \emph{crossplataform}, con el que abarcar un mayor mercado, a nivel de usuarios y dispositivos.
+Algo ideal es que se intento buscar un framework \emph{crossplataform}, con el que abarcar un mayor mercado, a nivel de usuarios y dispositivos.
 
 \subsubsection{Ionic}
 Ionic~\cite{wiki:ionnic} se basa en lenguaje de programación javascript, html y css. Internamente esta basado en otro framework, como es Angularjs. La licencia Open source, fue lanzado en el 2013, permite el desarrollo para iOS y Android. A sufrido gran cantidad de cambios desde entonces.
@@ -43,20 +43,41 @@ Algunas de las desventajas:
 \end{itemize}
 
 \subsubsection{React native}
-React native~\cite{wiki:ionnic} 
+React native~\cite{wiki:react} fue creado en 2015, de la mano de Facebook. La licencia que tiene es MIT. La diferencia que tiene con React, es que no manipula el DOM, por lo que tampoco usa HTML o CSS. 
+Se programa en javascript. Las aplicaciones más conocidas que usan este framework es instgram o facebook.
 
 Ventajas:
 \begin{itemize}
-	\item 
+	\item Gran comunidad de usuarios y herramientas.
+	\item Mejora de las funcionalidades constantemente.
 \end{itemize}
 
 Algunas de las desventajas:
 \begin{itemize}
-	\item 
+	\item Rendimiento algo menor.
+	\item No es código nativo, pero casi, por lo que no tiene soporte oficial de Google y Apple.
 \end{itemize}
 
 \subsubsection{Xamarin}
+Xamarin~\cite{wiki:xamarin} creado por Microsoft en el 2011, por lo que está desarrollado en .NET, siendo propietario.
+
+Ventajas:
+\begin{itemize}
+	\item Permite el desarrollo de iOS, Android, web pero nativas de escritorio también.
+	\item Puede llamar a fragmentos de código usados en otras plataformas.
+	\item Soporte para wearables.
+\end{itemize}
+
+Algunas de las desventajas:
+\begin{itemize}
+	\item Acceso limitado a las bibliotecas.
+	\item Soporte y actualizaciones lento / tarde.
+	\item Comunidad grande pero pequeña comparada con otras.
+	\item Aplicaciones de mayor tamaño.
+	\item Coste.
+\end{itemize}
 
 \subsubsection{Otros}
-
+Hay muchos otros, cmomo kotlin, Apache Cordoba, jQuery Mobile, Native script ...
+Pero no me convencieron por diversas razones. 
 \section{Flutter}
