--- a/docs/latex/bibliografia.bib
+++ b/docs/latex/bibliografia.bib
@@ -47,3 +47,10 @@ note = "[]"
 }
 
 
+@misc{ wiki:flutter,
+	author = "Wikipedia",
+	title = "Licencia --- Wikipedia{,} The Free Encyclopedia",
+	year = "2020",
+	url = {https://es.wikipedia.org/wiki/Flutter_(software)},
+	note = "[]"
+}
