--- a/docs/latex/tex/3_Conceptos_teoricos.tex
+++ b/docs/latex/tex/3_Conceptos_teoricos.tex
@@ -79,5 +79,7 @@ Algunas de las desventajas:
 
 \subsubsection{Otros}
 Hay muchos otros, cmomo kotlin, Apache Cordoba, jQuery Mobile, Native script ...
-Pero no me convencieron por diversas razones. 
+Pero no me convencieron por diversas razones.
+ 
 \section{Flutter}
+Flutter
