--- a/docs/latex/bibliografia.bib
+++ b/docs/latex/bibliografia.bib
@@ -54,3 +54,20 @@ note = "[]"
 	url = {https://es.wikipedia.org/wiki/Flutter_(software)},
 	note = "[]"
 }
+
+@misc{ wiki:flutter,
+	author = "Wikipedia",
+	title = "Licencia --- Wikipedia{,} The Free Encyclopedia",
+	year = "2020",
+	url = {https://es.wikipedia.org/wiki/Dart},
+	note = "[]"
+}
+
+
+@misc{ wiki:firebase,
+	author = "Wikipedia",
+	title = "Licencia --- Wikipedia{,} The Free Encyclopedia",
+	year = "2020",
+	url = {https://es.wikipedia.org/wiki/Firebase},
+	note = "[]"
+}
