--- a/docs/latex/tex/3_Conceptos_teoricos.tex
+++ b/docs/latex/tex/3_Conceptos_teoricos.tex
@@ -82,4 +82,34 @@ Hay muchos otros, cmomo kotlin, Apache Cordoba, jQuery Mobile, Native script ...
 Pero no me convencieron por diversas razones.
  
 \section{Flutter}
-Flutter
+Flutter~\cite{wiki:flutter} es un SDK de código abierto creado por Google a finales del 2018. Permite que los desarrolladores puedan crear aplicaciones para iOS, Android y web.
+
+Este se encuentra escrito en Dart, que es un lenguaje de programación creado por Google en 2011. Este lo que hace es una mejora del lenguaje javascript, pero sin pretender sustituirlo. Es decir, ofrecer mejores resultados y alternativas para algunos problemas, siendo una herramienta mejor, para proyectos más grandes, como es el caso de flutter.
+
+Por lo tanto Flutter es una herramienta mi nueva, con la que se pueden hacer aplicaciones comerciales para varias plataformas sin tener que programar exclusivamente para cada una de ellas. Ya que nos ofrece la compilación nativa directamente, reduciendo los costes a la hora de tener que llevar proyectos en los que sea necesario estar en los dos mercados.
+
+Las características más importantes son : 
+
+\begin{itemize}
+	\item Desarrollo rápido de las aplicaciones. Cuando se dice rápido es porque permite \emph{hot reload}, esta es la carga en caliente durante la fase de desarrollo. Implica que nos es necesario tener que compilar todo el código, si no aquellas partes que fueron modificadas. Lo que permite en tiempo de ejecución ver los cambios.
+	\item Está muy optimizado, con una evolución y soporte constante.
+	\item Es un lenguaje de programación respaldado por Google, con lo que esto conlleva. Seguridad, confianza, fiabilidad, soporte, cursos y un montón de herramientas(más de 300 apis distintas: mapas, reconocimiento facial, traductor ... ).
+	\item La integración con el sistema operativo Android es mucho más eficaz, ya que este también pertenece a Google.
+	\item Cuando se compila, lo hace a nativo, siendo una ganancia de rendimiento.
+	\item La curva de aprendizaje es baja, en el caso de que sepamos javascript, typescript o ecmascript.
+	\item La calidad de las animaciones.
+\end{itemize}
+
+Las desventajas que tiene son:
+\begin{itemize}
+	\item La mayor parte de la documentación se encuentra en inglés, pero es más problema de desarrollador, que de la propia documentación del framework.
+	\item Las aplicaciones ocupan más espacio que las nativas, ya que suelen incluir el SDK al completo.
+	\item Al ser tan nuevo, tiene algunos problemas, no ofrece todas las funcionalidades, como las que ofrecen otras plataformas. Google lo sabe y está apostando mucho por ello.
+	\item Es una comunidad pequeña, pero a crecido en dos años más que otras, en tiempos similares.
+\end{itemize}
+
+Al final me decanto por este Framework básicamente porque es algo nuevo y disruptivo. El respaldo de Google se me presentaba como garantía, con la tranquilidad que eso conlleva. Es decir, todo el \emph{cloud services de Google} se puede integrar con gran facilidad.
+Otra de las cosas que fueron de agrado es que la comunidad lo a recibido con los brazos abiertos, como se puede ver en la encuesta~\ref{fig:encuesta}, se encuentra entre los favoritos de los desarolladores, por algo será.
+
+\subsection{Firebase}
+Firebase~\cite{wiki:firebase}
