--- a/docs/latex/tex/3_Conceptos_teoricos.tex
+++ b/docs/latex/tex/3_Conceptos_teoricos.tex
@@ -112,4 +112,22 @@ Al final me decanto por este Framework básicamente porque es algo nuevo y disru
 Otra de las cosas que fueron de agrado es que la comunidad lo a recibido con los brazos abiertos, como se puede ver en la encuesta~\ref{fig:encuesta}, se encuentra entre los favoritos de los desarolladores, por algo será.
 
 \subsection{Firebase}
-Firebase~\cite{wiki:firebase}
+Firebase~\cite{wiki:firebase} es una plataforma para el desarollo de apliaciones web, Android e iOS, creada por Google en el 2014. Esta en la nube, formando el \emph{Google Cloud Plataform}, que consta de un conjunto de herramientas para dotar de una calidad enorme a los proyectos. Ya que permite la integración del ecosistema de Google como un todo.
+
+Fue integrada en el proyecto por el hecho de ser un servicio gratuito y que aportaba gran valor a la aplicación. Este pasa a ser de pago cuando la app tiene que escalarse a un nivel más grande, por el tema de usuarios o el número de peticiones que se realicen a la misma. Algunas de las herramientas que integra son de pago, otras no.
+
+Por lo tanto al ser multiplatafomra es un backend con el que poder controlar todo, ganancias, gastos, escalabilidad, nuevos productos, herramientas ... 
+
+Entre los servicios que ofrece tenemos:
+
+\begin{itemize}
+	\item \textbf{Real Time Data Base:} base de datos simples en tiempo real, si fuera necesario tener que guardar música, video o fotos, tiene otra parte que es la de Storage.
+	\item \textbf{Crash reporting:} herramienta para el reporte de errores que se producen en la aplicación.
+	\item \textbf{Autentication:} integración con la mayor cantidad de aplicaciones de redes sociales en las que su API permite esto. Obviamente la propia Google es una de ellas. Lo podemos ver en la siguiente imagen~\ref{fig:inicio}:
+	\begin{figure}[h]
+		\centering
+		\includegraphics[width=1\textwidth]{teoria/inicio.png}
+		\caption{Inicio de sesión}\label{fig:inicio}
+	\end{figure}
+	
+\end{itemize}
