--- a/docs/latex/tex/3_Conceptos_teoricos.tex
+++ b/docs/latex/tex/3_Conceptos_teoricos.tex
@@ -78,7 +78,7 @@ Algunas de las desventajas:
 \end{itemize}
 
 \subsubsection{Otros}
-Hay muchos otros, cmomo kotlin, Apache Cordoba, jQuery Mobile, Native script ...
+Hay muchos otros, como kotlin, Apache Cordoba, jQuery Mobile, Native script ...
 Pero no me convencieron por diversas razones.
  
 \section{Flutter}
@@ -129,5 +129,13 @@ Entre los servicios que ofrece tenemos:
 		\includegraphics[width=1\textwidth]{teoria/inicio.png}
 		\caption{Inicio de sesión}\label{fig:inicio}
 	\end{figure}
-	
+	\item \textbf{Test lab:} probar la aplicación antes de realizar el despliegue de la misma.
+	\item \textbf{Remote config:} hacer cambios internos del funcionamiento de la aplicación sin tener que recomplilar o actualizarla.
+	\item \textbf{Hosting:} servidor donde podemos publicar una página web.
+	\item \textbf{Análisis:} mediante las analíticas que ofrece~\ref{fig:numerousers}, sirve como herramienta de toma de decisiones. Pudiendo optimizar a que mercados dirigirse mediante una estrategia de marketing.
+	\begin{figure}[h]
+		\centering
+		\includegraphics[width=1\textwidth]{teoria/numerousers.png}
+		\caption{Ejemplo de Analytics}\label{fig:numerousers}
+	\end{figure}
 \end{itemize}
